--- a/templates/partials/_rateMoreDetails.html
+++ b/templates/partials/_rateMoreDetails.html
@@ -96,7 +96,7 @@
 
 
                                                     <td class="align-middle text-center text-xxs">
-                                                       <a href="{% url 'user-rate' item.pk %}">
+                                                       <a href="{% url 'user-rate' item.id %}">
                                                             <span class="badge badge-sm bg-maal">
                                                             المزيد
                                                         </span>
