--- a/office/templates/office/company_list.html
+++ b/office/templates/office/company_list.html
@@ -18,6 +18,33 @@
 
                         <p>لا توجد بيانات</p>
                     {% else %}
+                    <div class="row pt-3">
+                        <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+                            <div class="card">
+                                <div class="card-body p-3">
+                                    <div class="row">
+                                        <div class="col-8">
+                                            <div class="numbers">
+                                                <a style="cursor: pointer;text-decoration: none" href="{% url 'update-csv' %}">
+                                                    <p class="text-sm mb-0 text-capitalize font-weight-bold"> تعديل الشركات </p>
+                                                </a>
+                                            </div>
+                                        </div>
+                                        <div class="col-4 text-start">
+                                            <div class="icon icon-shape bg-maal shadow text-center border-radius-md">
+                                               <a href="{% url 'update-csv' %}" style="cursor: pointer; text-decoration: none">
+                                                    <i class="fas fa-plus text-lg opacity-10" aria-hidden="true"></i>
+                                               </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+
+
+                        </div>
+                    </div>
                         <div class="row">
     <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
         <div class="card">
