--- a/templates/partials/_analystTable.html
+++ b/templates/partials/_analystTable.html
@@ -1,3 +1,4 @@
+{% load humanize %}
   <div class="table-responsive">
                         <table class="table align-items-center mb-0">
                             <thead>
