--- a/templates/partials/_companyArrowsOwnersTable.html
+++ b/templates/partials/_companyArrowsOwnersTable.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <table style="margin:0 auto;"
        class="table table-bordered align-items-center mb-auto">
        <thead class="text_black">
@@ -39,17 +40,17 @@
                         </a>
                     </td>
                     <td class="align-middle text-center text-xxs">
-                        <p class="text-xxs  mb-0 text-black-50">{{ item.ownRatio}} %</p>
+                        <p class="text-xxs  mb-0 text-black-50">{{ item.ownRatio | intcomma}} %</p>
                     </td>
                     <td class="align-middle text-center text-xxs">
-                        <p class="text-xxs  mb-0 text-black-50">{{ item.numberOFArrows  }}</p>
+                        <p class="text-xxs  mb-0 text-black-50">{{ item.numberOFArrows | intcomma  }}</p>
 
                     </td>
                     <td class="align-middle text-center text-xxs">
-                     <p class="text-xxs">{{ item.company.arrow_value  }}</p>
+                     <p class="text-xxs">{{ item.company.arrow_value | intcomma  }}</p>
                     </td>
                    <td class="align-middle text-center text-xxs">
-                     <p class="text-xxs">{{ item.TotalArrowPrice  }}</p>
+                     <p class="text-xxs">{{ item.TotalArrowPrice | intcomma  }}</p>
                     </td>
                                    {% if request.user.is_emp or request.user.is_admin   %}
                <td class="ms-auto text-start" style="width: 1.2rem;">
