--- a/templates/partials/_ownerTable.html
+++ b/templates/partials/_ownerTable.html
@@ -1,3 +1,4 @@
+{% load humanize %}
 <table style="margin:0 auto;"
        class="table table-bordered align-items-center mb-auto">
        <thead class="text_black">
@@ -29,18 +30,14 @@
                         </a>
                     </td>
                     <td class="align-middle text-center text-xxs">
-                        <p class="text-xxs  mb-0 text-black-50">{{ item.NumberOfCompanies}}</p>
+                        <p class="text-xxs  mb-0 text-black-50">{{ item.NumberOfCompanies | intcomma   }}</p>
                     </td>
                     <td class="align-middle text-center text-xxs">
-                        <p class="text-xxs  mb-0 text-black-50">{{ item.numberOfArrows }}</p>
+                        <p class="text-xxs  mb-0 text-black-50">{{ item.numberOfArrows | intcomma  }}</p>
 
                     </td>
                     <td class="align-middle text-center text-xxs">
-                          {% if item.TotalArrowPrice is not None %}
-                     <p class="text-xxs">{{ item.TotalPriceArrows  }}</p>
-                        {% else %}
-                                           <p class="text-xxs">0</p>
-                        {% endif %}
+                     <p class="text-xxs">{{ item.TotalPriceArrows | intcomma   }}</p>
                     </td>
 
                                    {% if request.user.is_emp or request.user.is_admin   %}
